# etosdk

./: .gitignore  .readthedocs.yml  Getting Started.ipynb  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  eto.connectors.rst  eto.fluent.rst  eto.rst  index.rst  modules.rst
eto/: config.py  fluent.py  resolver.py  spark.py  util.py
eto/_internal/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
eto/_internal/api/: __init__.py  accounts_api.py  datasets_api.py  insight_api.py  jobs_api.py  model_api.py  query_api.py
eto/_internal/apis/: __init__.py
eto/_internal/model/: __init__.py  bar_chart.py  bar_chart_y.py  bar_chart_y_inner.py  box2d.py  coco_config.py  coco_source.py  create_job_request.py  create_model_request.py  create_project_request.py  dataset.py  dataset_details.py  download_dataset200_response.py  embedding.py  embeddings_response.py  embeddings_response_data_inner.py  filter_spec.py  get_download_job200_response.py  (+34 more)
eto/connectors/: base.py  coco.py  rikai.py
eto/fluent/: __init__.py  client.py  datasets.py  jobs.py  models.py
eto/internal/: __init__.py  api_client.py  configuration.py  model_utils.py  rest.py
notebooks/: Getting Started.ipynb
tests/: test_fluent.py  test_util.py
tests/connectors/: test_coco.py
tests/internal/: test_coco_config.py  test_coco_source.py  test_create_job_request.py  test_dataset.py  test_dataset_details.py  test_datasets_api.py  test_inline_response200.py  test_inline_response2001.py  test_inline_response404.py  test_job.py  test_jobs_api.py
(+13 files in other folders)
